--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,9 @@
 }
 
 .explore-btn{
-    position: relative;
+    position: absolute;
+    bottom: 10rem;
+    left: 49%;
 }
 /*#########################
         MAIN
@@ -77,7 +79,6 @@ main{
 main section{
     padding: 10rem 5rem;
 }
-
 /*About*/
 .about-section{
     margin: 0;
@@ -175,15 +176,15 @@ main section{
     margin: 0;
     padding: 0;
 }
-.form .radio:last-child{
-    grid-column: 1 / span 2;
-}
 .form .radio{
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 0;
     justify-content: left;
     padding: 0;
+}
+.form .radio div:last-child{
+    grid-column: 1 / span 2;
 }
 .form input[type = "text"], input[type="email"], input[type="url"]{
     width: 40rem;
